fix product card view on mobile

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 /* Navbar */
@@ -270,6 +271,8 @@ header {
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: none;
     scrollbar-width: none;
+    margin-left: 0; 
+    width: 100vw;
   }
   .scroll-button {
     display: none;
@@ -407,6 +410,11 @@ footer {
 
   .div5 {
     order: 3;
-    margin: 0;
+  }
+
+  .div5-1 {
+    display: flex;
+    margin-left: 20px;
+    width: 100vw;
   }
 }
